kubernetes/yml/airflow_custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  labels:
    app: airflow
spec:
#  serviceName: "airflow-hs"
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
      annotations:
        #prometheus.io/scrape: "true"
        #prometheus.io/scheme: "http"
        #prometheus.io/path: "/actuator/prometheus"
        #prometheus.io/port: "8080"  
    spec:
      containers:
      - name: airflow
        image: marcinkasinski/airflow
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config-airflow-dockerdag-cm
          mountPath: /usr/local/airflow/dags/dockerdag.py
          subPath: dockerdag.py
        - name: config-airflow-kubernetesdag-cm
          mountPath: /usr/local/airflow/dags/kubernetesdag.py
          subPath: kubernetesdag.py
      volumes:
        - name: config-airflow-dockerdag-cm
          configMap:
            name: airflow-dockerdag-cm
        - name: config-airflow-kubernetesdag-cm
          configMap:
            name: airflow-kubernetesdag-cm
---
apiVersion: v1
kind: Service
metadata:
  name: airflow
spec:
  type: NodePort
  ports:
  - port: 8080
    #nodePort: 30070
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: airflow
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: airflow
    http:
      paths:
      - path: /
        backend:
          serviceName: airflow
          servicePort: 8080
